# respeecher_tts

./: .gitignore  README.md  pyproject.toml  requirements.txt
respeecher_tts/: __init__.py  api.py  api_client.py  constants.py  datatypes.py
